--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ https://templatemo.com/tm-570-chain-app-dev
                   </div>
                   <div class="col-lg-12">
                     <div class="white-button scroll-to-section">
-                      <a href="#">Buy Now <i class="fab fa-font-awesome"></i></a>
+                      <a href="https://dx.app/dxsaleview?saleID=356&chain=Arbitrum">Buy Now <i class="fab fa-font-awesome"></i></a>
                     </div>
                   </div>
                 </div>
